--- a/index.html
+++ b/index.html
@@ -897,20 +897,28 @@ que la audacia e impidan que caiga bajo otros ojos.</p>
             </div>
         </div>
 
+        <!-- CONTENIDO EXTRA (OPCIONAL) -->
+        <div class="extra-content">
+            <div class="texto-cuento">
+                <p>Más contenido de tu cuento puede ir aquí...</p>
+                <p>Más párrafos...</p>
+                <p>Y más párrafos...</p>
+            </div>
+        </div>
+
         <!-- IMAGEN AL FINAL DE TODO - DESPUÉS DE TODO EL CONTENIDO -->
         <div class="content-background"></div>
 
         <!-- MÁS CONTENIDO SI QUIERES (OPCIONAL) -->
-        // <div class="extra-content">
-            // <div class="texto-cuento">
-                // <p>Contenido después de la imagen final...</p>
-                // <p>Si quieres poner algo después de la imagen, puedes hacerlo.</p>
-            // </div>
-        // </div>
+        <div class="extra-content">
+            <div class="texto-cuento">
+                <p>Contenido después de la imagen final...</p>
+                <p>Si quieres poner algo después de la imagen, puedes hacerlo.</p>
+            </div>
+        </div>
     </div>
-    </div>
-
     <script src="js/parallax.js"></script>
 </body>
 </html>
+
 
