--- a/cuento.html
+++ b/cuento.html
@@ -390,7 +390,7 @@ Sitôt qu' on le touche, il résonne.
                 audio: "p3.mp3",
                 actionButton: {
                     text: "Seguir escuchando",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp3.mp3",
                     nextPageDelay: 5000
                 }
             },
@@ -409,7 +409,7 @@ Sitôt qu' on le touche, il résonne.
                 audio: "p4.mp3",
                 actionButton: {
                     text: "Continuar",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp4.mp3",
                     nextPageDelay: 4500
                 }
             },
@@ -426,7 +426,7 @@ Sitôt qu' on le touche, il résonne.
                 audio: "p5.mp3",
                 actionButton: {
                     text: "Días después",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp5.mp3",
                     nextPageDelay: 4000
                 }
             },
@@ -499,7 +499,7 @@ pues la sonrisa ha muerto.</div>
                 audio: "p6.mp3",
                 actionButton: {
                     text: "Siguiente",
-                    sound: "",
+                    sound: "bp6.mp3",
                     nextPageDelay: 5000
                 }
             },
@@ -518,7 +518,7 @@ pues la sonrisa ha muerto.</div>
                 audio: "p7.mp3",
                 actionButton: {
                     text: "Llorar",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp7.mp3",
                     nextPageDelay: 4500
                 }
             },
@@ -537,7 +537,7 @@ pues la sonrisa ha muerto.</div>
                 audio: "p8.mp3",
                 actionButton: {
                     text: "Descansar",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp8.mp3",
                     nextPageDelay: 4000
                 }
             },
@@ -561,7 +561,7 @@ pues la sonrisa ha muerto.</div>
                 audio: "p9.mp3",
                 actionButton: {
                     text: "Leer",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp9.mp3",
                     nextPageDelay: 4500
                 }
             },
@@ -597,7 +597,7 @@ pues la sonrisa ha muerto.</div>
                 audio: "p10.mp3",
                 actionButton: {
                     text: "Escuchar",
-                    sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
+                    sound: "bp10.mp3",
                     nextPageDelay: 4000
                 }
             },
@@ -978,3 +978,4 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
