--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@ Aquí termina la primera idea principal: el narrador expresa su incapacidad de l
 	<!-- Sección de carta interactiva -->
 <div class="carta-interactiva">
     <h3>Correo Electrónico</h3>
-    <p>Haz click si quieres ver cómo escribir un correo electrónico</p>
     
     <div class="envelope-container">
         <div class="envelope" id="envelope">
@@ -152,7 +151,7 @@ Aquí termina la primera idea principal: el narrador expresa su incapacidad de l
         </div>
     </div>
     
-    <p class="instructions">Haz clic en el sobre para abrirlo y ver la carta en grande</p>
+    <h3 >Haz clic en el sobre para abrirlo y ver el correo en grande</h3>
 </div>
 
 
@@ -290,6 +289,7 @@ C- Sentía miedo. Sin embargo, no podía marcharme.</br></p>
 </body>
 
 </html>
+
 
 
 
