--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<div class="content">
             <div class="cuento">
+				<img src="portada.jpg" alt="Portada" style="max-width: 100%; height: auto; display: block; margin: 30px auto;">
 	<h1>Manual Moreno</h1>
 <div class="autor">Capítulo 1<br/>
 "Correo Electrónico y Signos de Puntuación"<div>
@@ -289,6 +290,7 @@ C- Sentía miedo. Sin embargo, no podía marcharme.</br></p>
 </body>
 
 </html>
+
 
 
 
