--- a/index.html
+++ b/index.html
@@ -42,118 +42,23 @@
 "Correo Electrónico y Signos de Puntuación"<div>
 <div class="texto-cuento">
 
-
-<h2 style="text-align: left;" id="punto-coma-punto-y-coma"><br/>Punto, coma y punto y coma: los signos que ordenan tus ideas.</h2>
-
-<p><br/>El punto (.), el punto y coma (;) y la coma (,) son algunos de los signos ortográficos que representan breves pausas entre las palabras de un texto y se diferencian por la duración de la misma: siendo el punto el de mayor duración, el punto y coma como un estadío intermedio y la coma como la pausa más breve.
-Gracias a la duración particular de cada signo en la lectura, podemos desprender los usos que se le dan para formar oraciones.</p> 
-
-<h2 style="text-align: left;">-El punto</h2>
-
-<h3 style="text-align: left;">-El punto y aparte</h3>
-
-<p>Cuando escribimos un texto, lo dividimos en párrafos, que son como pequeñas secciones donde contamos una idea completa. El <strong>punto y aparte</strong> se usa para terminar un párrafo y empezar otro, no se pone al azar sino que cada párrafo debe tener una idea principal. Veamos unos ejemplos:</br></br>
-
-○Primer párrafo:</br>
-El sol comenzaba a ocultarse detrás de las montañas y el cielo se tornaba de colores rosados y naranjas. Los pájaros regresaban a sus nidos y el viento soplaba suavemente.</br></br>
-
-○Segundo párrafo:</br>
-El pueblo de los Hilichuchrls cocinaba alegremente un domingo por la mañana, cantaban canciones y bailaron hasta altas horas.</br></br>
-
-Si juntáramos las dos ideas en un mismo párrafo, sería muy largo y difícil de entender. Por eso, usamos el <strong>punto y aparte</strong> para organizar mejor la información.</p>
-
-<h3 style="text-align: left;">El punto y seguido</h3>
-
-<p>Dentro de un mismo párrafo, a veces tenemos varias frases que forman una idea más grande. Para separarlas, usamos el <strong>punto y seguido</strong>. Veamos un ejemplo:</br></br>
-
-○Julio Argentino Roca nació en 1843. A los 29 años se casó con Clara Funes.</br></br>
-
-○El día está completamente gris. Sin embargo, por la tarde saldrá el sol.</br></br>
-
-Cada punto indica que terminó una información y ahora empezamos otra que sigue hablando de la misma idea general: la vida de Roca o el clima. Usamos este punto para  dividir información relacionada, para cambiar de idea utilizaremos el punto y aparte.</p>
-
-<h2 style="text-align: left;">-La coma</h2>
-
-<p>La coma sirve para organizar mejor las ideas dentro de las oraciones. Se usa para separar partes de una oración, para marcar conectores o para aclarar información. A diferencia del punto, la coma no marca el final de una idea, sino una pequeña pausa.</p>
-
-<h3 style="text-align: left;">Para aclarar algo</h3>
-
-<p>A veces, usamos comas para agregar alguna aclaración o un dato extra. Veamos un ejemplo:</br></br>
-
-○El señor Gómez, mi profesor de Lengua, explicó el uso de la coma.</br></br>
-
-En este caso, “mi profesor de Lengua” es una aclaración sobre quién es el Señor Gómez. Si la sacamos, la oración sigue teniendo sentido.</p>
-
-<h3 style="text-align: left;">Para separar partes en una oración</h3>
-
-<p>La coma también se usa para enumerar cosas, cada coma separa los elementos de la lista. Por ejemplo:</br></br>
-
-○En mi mochila tengo lápices, una regla, un cuaderno y una cartuchera.</p>
-
-<h3 style="text-align: left;">Para marcar conectores.</h3>
-
-<p>Cuando usamos palabras o frases que unen ideas, también se colocan comas. Por ejemplo:</br></br>
-
-○No estudié mucho, <strong>sin embargo</strong>, aprobé el examen.</br></br>
-
-○Me gusta leer, <strong>por ejemplo</strong>, novelas de aventuras.</br></br>
-
-En ambos casos, la coma ayuda a ordenar y dar claridad al texto marcando los conectores. </p>
-
-<h2 style="text-align: left;">-El punto y coma</h2>
-
-<p>El <strong>punto y coma</strong> se usa para hacer una pausa más larga que la coma, pero más corta que el punto. Sirve para separar ideas que están relacionadas entre sí o para separar elementos en una lista larga. </p>
-
-<h3 style="text-align: left;">Para separar ideas relacionadas.</h3>
-
-<p>Se usa cuando hay dos oraciones que podrían ir separadas por un punto, pero están muy conectadas entre sí. Por ejemplo:</br></br>
-
-○Estudié toda la tarde; mañana tengo un examen importante.
-
-Las dos partes hablan del mismo tema, por eso se unen con <strong>punto y coma</strong>.</p>
-
-<h3 style="text-align: left;">Para separar elementos en una lista larga</h3>
-
-<p>Cuando hacemos una enumeración y los elementos ya tienen comas adentro, usamos <strong>punto y coma</strong> para que se entienda mejor. Por ejemplo:</br></br>
-
-○En el viaje conocí a Lucía, una chica de Chile; a Marcos, un amigo de España; y a Renata, mi prima de México.</p>
-
-</br></hr>
-
-<h3 style="text-align: left;">Ejemplos del uso de la coma:</h3>
-
-<p> Imaginemos que vamos a pedir empanadas y queremos anotar cuántas de cada sabor:</br></br>
-
-○2 carne, 4 de choclo, 5 de carne, 1 de choclo, 9 de carne, 1 de carne, 7 de choclo, 5 de carne, 5 de choclo, 5 de choclo, 5 de choclo, 1 de choclo, 2 de choclo, 5 de choclo, 5 de choclo.</br></br>
-
-En esta lista, cada coma sirve para separar un pedido del siguiente lo que resulta  más fácil de leer. </br>
-Como ya sabemos, uno de los usos de la coma es ayudar a organizar la información cuando enumeramos varios elementos. Sin la coma, todo se vería mucho más confuso porque no sabríamos dónde termina un pedido y dónde comienza el siguiente:</br></br>
-
-○2 de carne 4 de choclo 5 de carne 1 de choclo 9 de carne…</p>
-
-<h3 style="text-align: left;">Veamos este fragmento del cuento de Poe:</h3>
-
-<p class="poema">“Misterio insoluble; y yo no podía luchar con los sombríos pensamientos que se congregaban a mi alrededor mientras reflexionaba. Me vi obligado a incurrir en la insatisfactoria conclusión de que mientras hay, fuera de toda duda, combinaciones de simplísimos objetos naturales que tienen el poder de afectarnos así, el análisis de este poder se encuentra aún entre las consideraciones que están más allá de nuestro alcance.”</p>
-
-<h3 style="text-align: left;">Observemos el uso del punto y coma:</h3>
-<p>El primer fragmento “Misterio insoluble” es como una idea inicial intensa y breve, casi exclamativa. El punto y coma une esta idea con la siguiente, mostrando que los pensamientos del narrador surgen directamente de ese misterio, sin romper la fluidez del relato.</p>
-
-<h3 style="text-align: left;">Observamos el uso de la coma:</h3>
-
-<p>Ahora, el uso de la coma en este ejemplo es  principalmente para hacer aclaraciones y dividir ideas complejas dentro de la misma oración. Por ejemplo:</p>
-
-<p class="poema">“mientras hay, fuera de toda duda, combinaciones de simplísimos objetos naturales […]”.  La frase “fuera de toda duda” es una aclaración que refuerza la certeza del narrador</p>
-
-<p>En general, en las frases largas de Poe, las comas funcionan como pequeñas pausas que ayudan al lector a respirar y a seguir el hilo del pensamiento, que es denso y reflexivo.</p>
-
-<h3 style="text-align: left;">Observamos el uso del punto:</h3>
-
-<p>Ejemplo: “mientras reflexionaba.”</br>
-Aquí termina la primera idea principal: el narrador expresa su incapacidad de luchar contra sus pensamientos. Luego empieza otra oración: “Me vi obligado a incurrir en la insatisfactoria conclusión […]”. El punto permite separar dos ideas largas, para que cada una tenga su propia fuerza y claridad.</p>
-
+<!-- Sección Genially - Colócala donde quieras en tu HTML -->
+<div class="genially-container">
+    <h3 class="titulo-genially">Punto, coma y punto y coma: los signos que ordenan tus ideas.</h3>
+    <div class="genially-embed" id="punto-coma-punto-y-coma">
+        <iframe 
+            src="https://view.genially.com/690273f56cafc8da037a11fc/presentation-punto-coma-punto-y-coma" 
+            width="100%" 
+            height="600" 
+            frameborder="0" 
+            allowfullscreen 
+            scrolling="no">
+        </iframe>
+    </div>
+</div>
 	<!-- Sección de carta interactiva -->
 <div class="carta-interactiva">
-    <h3>Correo Electrónico</h3>
+    <h3>Correo Electrónico.</h3>
     
     <div class="envelope-container">
         <div class="envelope" id="envelope">
@@ -176,7 +81,7 @@ Aquí termina la primera idea principal: el narrador expresa su incapacidad de l
         </div>
     </div>
     
-    <h3 >Haz clic en el sobre para abrirlo y ver el correo en grande</h3>
+    <h3>Haz clic en el sobre para abrirlo y ver el correo en grande.</h3>
 </div>
 
 
@@ -363,6 +268,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
 
 
 
