--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ C- Sentía miedo. Sin embargo, no podía marcharme.</br></p>
 
 <div class="carta-interactiva">
     <div class="envelope-container">
-        <div class="envelope" id="envelope">
+        <div class="envelope" id="envelope1">
             <div class="envelope-back"></div>
             <div class="envelope-flap"></div>
             <div class="envelope-content">
@@ -141,10 +141,10 @@ C- Sentía miedo. Sin embargo, no podía marcharme.</br></p>
     </div>
     
     <div class="card-large-container">
-        <div class="card-large" id="cardLarge">
+        <div class="card-large" id="cardLarge1">
             <!-- Imagen grande que se muestra al abrir el sobre -->
             <img src="cartausher.png" alt="">
-            <button class="close-btn" id="closeBtn">×</button>
+            <button class="close-btn" id="closeBtn1">×</button>
         </div>
     </div>
 </div>
@@ -288,6 +288,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
 
 
 
