--- a/cuento.html
+++ b/cuento.html
@@ -615,7 +615,7 @@ pues la sonrisa ha muerto.</div>
                 imageTitle: "",
                 audio: "p11.mp3",
                 actionButton: {
-                    text: "Fin",
+                    text: "Actividades",
                     sound: "https://assets.mixkit.co/sfx/preview/mixkit-magic-sparkle-sound-3091.mp3",
                     nextPageDelay: 5000
                 }
@@ -910,10 +910,14 @@ async function executeAction() {
         
         // Cambiar a la siguiente página después del delay
         setTimeout(() => {
-            if (currentPage < storyPages.length - 1) {
+            // SI ES LA ÚLTIMA PÁGINA, IR A ACTIVIDADES
+            if (currentPage === storyPages.length - 1) {
+                window.location.href = "actividades.html";
+            } 
+            // SI NO ES LA ÚLTIMA, CONTINUAR NORMAL
+            else if (currentPage < storyPages.length - 1) {
                 nextPage();
             } else {
-                // Si es la última página, volver al inicio
                 loadPage(0);
             }
         }, page.actionButton.nextPageDelay);
@@ -978,4 +982,5 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
 
