--- a/cuento.html
+++ b/cuento.html
@@ -912,7 +912,7 @@ async function executeAction() {
         setTimeout(() => {
             // SI ES LA ÚLTIMA PÁGINA, IR A ACTIVIDADES
             if (currentPage === storyPages.length - 1) {
-                window.location.href = "actividades.html";
+                window.location.href = "index.html#actividades";
             } 
             // SI NO ES LA ÚLTIMA, CONTINUAR NORMAL
             else if (currentPage < storyPages.length - 1) {
@@ -982,5 +982,6 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
 
 
