--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                class="enlace-indice archivo">
                 Cuento Interactivo
             </a>
-        </li>
+        </li
+		<li class="item-indice">
+            <a href="#actividades" 
+               class="enlace-indice">
+                Actividades
+            </a>
+			<li class="item-indice">
+            <a href="#bibliografia" 
+               class="enlace-indice">
+                Bibliografía
+            </a>
     </ul>
 </div>
 				
@@ -55,6 +65,8 @@
         </iframe>
     </div>
 </div>
+
+	<a href="cuento.html">Ir al Cuento Interactivo</a>
 	<!-- Sección de carta interactiva -->
 <div class="carta-interactiva">
     <h3>Correo Electrónico.</h3>
@@ -85,7 +97,7 @@
 
 
 	
-<h2 style="text-align: left;"><br/> ACTIVIDADES: </h2>
+<h2 style="text-align: left;" id="actividades"><br/> ACTIVIDADES: </h2>
 
 <p>1-Luego de leer el cuento, han notado que la narración produce emociones variadas.  Escribile un mensaje de whatsapp a tu amigo/a contándole qué sensaciones o emociones te produjo la lectura ( no olvides de utilizar los signos de puntuación para transmitirlas)</p>
 
@@ -152,7 +164,8 @@ C- Sentía miedo. Sin embargo, no podía marcharme.</br></p>
     </div>
 </div>
 
-<a href="cuento.html">Ir al Cuento Interactivo</a>
+<h2 style="text-align: left;" id="bibliografia"><br/> Bibliografía </h2>
+	<p>BLABLABLA</p>
 
 
 
@@ -305,6 +318,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
