--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
     </div>
 </div>
 
-<p>7-  La siguiente carta fue escrita por Roderick Usher a su amigo antes de su llegada a la mansión. El texto no tiene ningún signo de puntuación. Tu tarea es agregar los puntos, comas y los puntos y coma que consideres necesarios para que tenga sentido y sea claro. </p>
+	<div class="actividad-escritura">
+    <h4>Actividad 3: Carta de Roderick Usher</h4>
+	<p>La siguiente carta fue escrita por Roderick Usher a su amigo antes de su llegada a la mansión. El texto no tiene ningún signo de puntuación. Tu tarea es agregar los puntos, comas y los puntos y coma que consideres necesarios para que tenga sentido y sea claro. </p>
 
 
 <!-- Segunda Carta Interactiva - Carta de Roderick Usher -->
@@ -265,6 +267,7 @@ Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y
             <button class="btn-limpiar">Limpiar</button>
         </div>
     </div>
+</div>
 </div>
 
 <h2 style="text-align: left;" id="evaluacion"><br/> Evaluación Integradora</h2>
@@ -557,6 +560,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
