--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </textarea>
     <div class="acciones-texto">
         <button class="btn-guardar">Guardar</button>
-        <button class="btn-limpiar">Limpiar</button>
+        <button class="btn-limpiar">Borrar</button>
     </div>
 </div>
 
@@ -214,7 +214,7 @@
 
     <div class="acciones-texto">
         <button class="btn-verificar" onclick="verificarRespuestas()">Verificar Respuestas</button>
-        <button class="btn-limpiar" onclick="limpiarSelecciones()">Limpiar Selecciones</button>
+        <button class="btn-limpiar" onclick="limpiarSelecciones()">Borrar Selecciones</button>
     </div>
 </div>
 
@@ -261,10 +261,10 @@
             placeholder="Escribe aquí la carta de Roderick Usher con los signos de puntuación correctos..."
             maxlength="1000"
             rows="12">
-Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y no sé nada de vos debo confesarte que mi salud se ha debilitado bastante de una manera muy inquietante la casa  se siente más silenciosa cada día las paredes parecen observarnos y mi hermana se encuentra muy enferma también su apariencia me preocupa tanto como la mía a veces me parece escuchar ruidos en el pasillo pero cuando me acerco no hay nada ni nadie las noches son cada vez más largas y el aire más denso necesito de tu compañía te pido que por favor vengas lo antes posible atentamente tu amigo Roderick Usher.</textarea>
+Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y no sé nada de vos debo confesarte que mi salud se ha debilitado bastante de una manera muy inquietante la casa  se siente más silenciosa cada día las paredes parecen observarnos y mi hermana se encuentra muy enferma también su apariencia me preocupa tanto como la mía a veces me parece escuchar ruidos en el pasillo pero cuando me acerco no hay nada ni nadie las noches son cada vez más largas y el aire más denso necesito de tu compañía te pido que por favor vengas lo antes posible atentamente tu amigo Roderick Usher</textarea>
         <div class="acciones-texto">
             <button class="btn-guardar">Guardar corrección</button>
-            <button class="btn-limpiar">Limpiar</button>
+            <button class="btn-limpiar">Borrar</button>
         </div>
     </div>
 </div>
@@ -303,7 +303,7 @@ Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y
     
     <div class="acciones-texto">
         <button class="btn-guardar">Guardar correo</button>
-        <button class="btn-limpiar">Limpiar todo</button>
+        <button class="btn-limpiar">Borrar todo</button>
         <button class="btn-enviar">Enviar</button>
     </div>
 </div>
@@ -560,6 +560,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
