--- a/cuento.html
+++ b/cuento.html
@@ -592,7 +592,7 @@ pues la sonrisa ha muerto.</div>
 					<p>Apenas habían salido de mis labios estas palabras, cuando —como si realmente un escudo de bronce, en ese momento, hubiera caído con todo su peso sobre un pavimento de plata— percibí un eco claro, profundo, metálico y resonante, aunque en apariencia sofocado. Incapaz de dominar mis nervios, me puse en pie de un salto; pero el acompasado movimiento de Usher no se interrumpió. Me precipité al sillón donde estaba sentado. Sus ojos miraban fijos hacia adelante y dominaba su persona una rigidez <strong><span class="glosario" data-termino="pétrea">pétrea</span></strong>. Pero, cuando posé mi mano sobre su hombro, un fuerte estremecimiento recorrió su cuerpo; una sonrisa malsana tembló en sus labios, y vi que hablaba con un murmullo bajo, apresurado, ininteligible, como si no advirtiera mi presencia. Inclinándome sobre él, muy cerca, bebí, por fin, el horrible significado de sus palabras:</p>
 
                 `,
-                image: "https://images.unsplash.com/photo-1476820865390-c52aeebb9891?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80",
+                image: "usherleyendo.png",
                 imageTitle: "",
                 audio: "p10.mp3",
                 actionButton: {
@@ -982,6 +982,7 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
 
 
 
