--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
 
 <div class="actividad-escritura">
     <h4>Actividad 1: Mensaje de WhatsApp</h4>
-    <p>Luego de leer el cuento, han notado que la narración produce emociones variadas. Escribile un mensaje de whatsapp a tu amigo/a contándole qué sensaciones o emociones te produjo la lectura (no olvides de utilizar los signos de puntuación para transmitirlas):</p>
-    
+    <p>Luego de leer el cuento, reflexiona sobre el uso de los signos de puntuación dentro de la obra.
+Escribe un mensaje de WhatsApp (en el espacio que se encuentra a continuación) dirigido a un amigo o amiga, 
+		contándole por qué crees que es importante el uso de los puntos, las comas y los puntos y comas en el cuento, 
+		y qué cambiaría si estos signos no estuvieran presentes.</p>
     <div class="encabezado-texto">
         <span class="contador-caracteres">0/500 caracteres</span>
     </div>
@@ -220,7 +222,9 @@
 
 	<div class="actividad-escritura">
     <h4>Actividad 3: Carta de Roderick Usher</h4>
-	<p>La siguiente carta fue escrita por Roderick Usher a su amigo antes de su llegada a la mansión. El texto no tiene ningún signo de puntuación. Tu tarea es agregar los puntos, comas y los puntos y coma que consideres necesarios para que tenga sentido y sea claro. </p>
+	<p>La siguiente carta fue escrita por Roderick Usher a su amigo
+		antes de su llegada a la mansión. El texto no tiene ningún signo de puntuación.
+		Tu tarea es agregar los puntos, comas y los puntos y coma que consideres necesarios para que tenga sentido y sea claro. </p>
 
 
 <!-- Segunda Carta Interactiva - Carta de Roderick Usher -->
@@ -273,7 +277,8 @@ Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y
 <h2 style="text-align: left;" id="evaluacion"><br/> Evaluación Integradora</h2>
 	<div class="actividad-escritura">
     <h4>Redacción de Correo Electrónico</h4>
-    <p>Fuiste testigo del hundimiento de la casa Usher y por tal motivo no llegaste a tiempo a un examen importante. Redacta un email a tu profesor explicando el motivo de tu tardanza.</p>
+    <p style="text-align: left;"> Fuiste testigo del hundimiento de la Casa Usher y, por tal motivo no llegaste a tiempo a un examen importante.
+		Redacta un correo electrónico en el que expliques a tu profesor el motivo de tu tardanza.</p>
     
     <div class="formulario-correo">
         <div class="campo-formulario">
@@ -588,6 +593,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
