--- a/cuento.html
+++ b/cuento.html
@@ -494,7 +494,7 @@ sale una horrenda multitud que ríe...
 pues la sonrisa ha muerto.</div>
 
                 `,
-                image: "https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80",
+                image: "guitarra.png",
                 imageTitle: "",
                 audio: "p6.mp3",
                 actionButton: {
@@ -556,7 +556,7 @@ pues la sonrisa ha muerto.</div>
 					<p>—¡No debes mirar, no mirarás eso! —Dije, estremeciéndome, mientras con suave violencia apartaba a Usher de la ventana para conducirlo a un asiento—. Estos espectáculos, que te confunden, son simples fenómenos eléctricos nada extraños, o quizá tengan su horrible origen en el <strong><span class="glosario" data-termino="miasma">miasma</span></strong> corrupto del estanque. Cerremos esta ventana; el aire está frío y es peligroso para tu salud. Aquí tienes una de tus novelas favoritas. Yo leeré y me escucharás, y así pasaremos juntos esta noche terrible.</p>
 
                 `,
-                image: "https://images.unsplash.com/photo-1519751138087-5bf79df62d5b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80",
+                image: "grito.png",
                 imageTitle: "",
                 audio: "p9.mp3",
                 actionButton: {
@@ -982,6 +982,7 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
 
 
 
