--- a/cuento.html
+++ b/cuento.html
@@ -421,7 +421,7 @@ Sitôt qu' on le touche, il résonne.
 					<p>En los varios días posteriores, ni Usher ni yo mencionamos su nombre, y durante este periodo me entregué a vehementes esfuerzos para aliviar la melancolía de mi amigo. Pintábamos y leíamos juntos; o yo escuchaba, como en un sueño, las extrañas improvisaciones de su elocuente guitarra. Y así, a medida que una intimidad cada vez más estrecha me introducía sin reserva en lo más recóndito de su alma, iba advirtiendo con amargura la futileza de todo intento de alegrar un espíritu cuya oscuridad, como una cualidad positiva, inherente, se derramaba sobre todos los objetos del universo físico y moral, en una incesante irradiación de tinieblas.</p>
 
                 `,
-                image: "https://images.unsplash.com/photo-1518481852452-9415b262eba4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80",
+                image: "madeline.png",
                 imageTitle: "",
                 audio: "p5.mp3",
                 actionButton: {
@@ -494,7 +494,7 @@ sale una horrenda multitud que ríe...
 pues la sonrisa ha muerto.</div>
 
                 `,
-                image: "guitarra.png",
+                image: "guitarra.jpg",
                 imageTitle: "",
                 audio: "p6.mp3",
                 actionButton: {
@@ -982,6 +982,7 @@ window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
 </html>
+
 
 
 
