--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Querido amigo espero que te encuentres bien hace mucho tiempo que no nos vemos y
 <h2 style="text-align: left;" id="evaluacion"><br/> Evaluación Integradora</h2>
 	<div class="actividad-escritura">
     <h4>Redacción de Correo Electrónico</h4>
-    <p style="text-align: left;"> Fuiste testigo del hundimiento de la Casa Usher y, por tal motivo no llegaste a tiempo a un examen importante.
+    <p style="text-align: left;"> Fuiste testigo del hundimiento de la Casa Usher y, por tal motivo, no llegaste a tiempo a un examen importante.
 		Redacta un correo electrónico en el que expliques a tu profesor el motivo de tu tardanza.</p>
     
     <div class="formulario-correo">
@@ -595,6 +595,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
