--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Escribe un mensaje de WhatsApp (en el espacio que se encuentra a continuación) 
             </label>
             <label class="opcion">
                 <input type="radio" name="pregunta1" value="C">
-                <span class="opcion-texto">C- El viento soplaba con fuerza, la casa parecía crujir.</span>
+                <span class="opcion-texto">C- El viento soplaba con fuerza, la casa parecía, crujir.</span>
             </label>
         </div>
     </div>
@@ -595,6 +595,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
