--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 "Correo Electrónico y Signos de Puntuación"<div>
 <div class="texto-cuento">
 
+<img src="poe.jpg" alt="Portada" style="max-width: 100%; height: auto; display: block; margin: 30px auto;">
 	<div class="boton-cuento-container">
     <a href="cuento.html" class="boton-cuento-alternativo">
         <span class="boton-icono">📚</span>
@@ -595,6 +596,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
