--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 <div class="actividad-escritura">
     <h4>Actividad 1: Mensaje de WhatsApp</h4>
     <p>Luego de leer el cuento, reflexiona sobre el uso de los signos de puntuación dentro de la obra.
-Escribe un mensaje de WhatsApp (en el espacio que se encuentra a continuación) dirigido a un amigo o amiga, 
-		contándole por qué crees que es importante el uso de los puntos, las comas y los puntos y comas en el cuento, 
-		y qué cambiaría si estos signos no estuvieran presentes.</p>
+Escribe un mensaje de WhatsApp (en el espacio que se encuentra a continuación) dirigido a un amigo o amiga, contándole por qué crees que es importante el uso de los puntos, las comas y los puntos y comas en el cuento, 
+		y qué cambiaría si estos signos no estuvieran presentes. Podes tener en cuenta el siguiente ejemplo para escribir tu mensaje: "Hola Luuu cuanto tiempo, te quería contar...".</p>
     <div class="encabezado-texto">
         <span class="contador-caracteres">0/500 caracteres</span>
     </div>
@@ -596,6 +595,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
