--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Escribe un mensaje de WhatsApp (en el espacio que se encuentra a continuación) 
     
     <!-- Pregunta 1 -->
     <div class="pregunta-multiple">
-        <p class="pregunta-titulo"><strong>1• ¿Cuál oración es correcta?</strong></p>
+        <p class="pregunta-titulo"><strong>1• ¿Qué oración es correcta?</strong></p>
         <div class="opciones-container">
             <label class="opcion">
                 <input type="radio" name="pregunta1" value="A">
@@ -595,6 +595,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
